// @skip-codegen-identical-test

syntax = "proto2";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "rustproto.proto";
option (rustproto.generate_accessors_all) = true;


message TestFmtJsonWellKnownTypes {
    optional .google.protobuf.Duration duration = 3;
    optional .google.protobuf.Timestamp timestamp = 4;
    optional .google.protobuf.FieldMask field_mask = 5;
    repeated .google.protobuf.NullValue null_values = 10;
    optional .google.protobuf.Value value = 12;
    optional .google.protobuf.ListValue list_value = 13;
    optional .google.protobuf.Struct struct_value = 14;
    optional .google.protobuf.Any any_value = 15;

    optional .google.protobuf.DoubleValue double_value = 31;
    optional .google.protobuf.FloatValue float_value = 32;
    optional .google.protobuf.Int64Value int64_value = 33;
    optional .google.protobuf.UInt64Value uint64_value = 34;
    optional .google.protobuf.Int32Value int32_value = 35;
    optional .google.protobuf.UInt32Value uint32_value = 36;
    optional .google.protobuf.BoolValue bool_value = 37;
    optional .google.protobuf.StringValue string_value = 38;
    optional .google.protobuf.BytesValue bytes_value = 39;
}
